# vacinometro

./: .env.sample  README.md  pyproject.toml  requirements.txt  scraper.R  scrapy.cfg
.github/workflows/: scrapper.yml
vacinometro/: pipelines.py  settings.py
vacinometro/spiders/: vaccines.py
