[tool.poetry]
name = "vacinometro"
version = "0.1.0"
description = ""
authors = ["Dados Abertos de Feira"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.4.1"
gspread = "^3.6.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
